# 1BA_CS_UA-TrafficSimulator

./: .gitignore  CMakeLists.txt  Contracts.md  DesignByContract.h  README.md  SimulationException.cpp  SimulationException.h  TrafficSimulation  TrafficSimulation.cpp  TrafficSimulation.h  TrafficSimulationMain.cpp  TrafficSimulationTests  TrafficSimulationTests.cpp  Utils.cpp  Utils.h  Variables.h  main.cpp  tests.cpp
objects/: Ambulance.cpp  Ambulance.h  Bus.cpp  Bus.h  BusStop.cpp  BusStop.h  Car.cpp  Car.h  Crossroad.cpp  Crossroad.h  FireEngine.cpp  FireEngine.h  PoliceCar.cpp  PoliceCar.h  Street.cpp  Street.h  TrafficLight.cpp  TrafficLight.h  Vehicle.cpp  Vehicle.h  VehicleGenerator.cpp  VehicleGenerator.h
objects/vehicles/: Ambulance.cpp  Ambulance.h  Bus.cpp  Bus.h  Car.cpp  Car.h  FireEngine.cpp  FireEngine.h  PoliceCar.cpp  PoliceCar.h
parsers/: BusStopParser.cpp  BusStopParser.h  CrossroadParser.cpp  CrossroadParser.h  ElementParser.cpp  ElementParser.h  ParseException.cpp  ParseException.h  StreetParser.cpp  StreetParser.h  TrafficLightParser.cpp  TrafficLightParser.h  VehicleGeneratorParser.cpp  VehicleGeneratorParser.h  VehicleParser.cpp  VehicleParser.h
parsers/tinyxml/: tinyxml.h
planning/: Plan1.0.xls  Plan2.0.xls  Plan2.1.xls  TijdsBlad.xls
testInput/: consistencyError.txt  consistencyError1.xml  consistencyError2.xml  consistencyError3.xml  consistencyError4.xml  consistencyError5.xml  consistencyError6.xml  consistencyError7.xml  consistencyError8.xml  consistencyError9.xml  domainTest.xml  expectedHappyDayOut.txt  expectedHappyDayOut1.txt  expectedWriteOut1.txt  expectedWriteOut12.txt  expectedWriteOut6.txt  expectedWriteOut7.txt  expectedWriteOut9.txt  illegalSimulation1.xml  illegalSimulation2.xml  illegalSimulation3.xml  illegalSimulation4.xml  legalSimulation1.xml  legalSimulation10.xml  legalSimulation11.xml  legalSimulation12.xml  legalSimulation13.xml  legalSimulation2.xml  legalSimulation3.xml  legalSimulation31.xml  legalSimulation4.xml  legalSimulation5.xml  legalSimulation6.xml  legalSimulation7.xml  legalSimulation8.xml  legalSimulation9.xml  syntaxError1.xml  syntaxError10.xml  syntaxError11.xml  syntaxError12.xml  (+46 more)
testOutput/: consistencyError2.txt  writeOut1.txt  writeOut3.txt  writeOut4.txt  writeOut5.txt
tests/: BusStopDomainTests.cpp  CrossroadDomainTests.cpp  StreetDomainTests.cpp  TrafficLightTests.cpp  TrafficSimulationDomainTests.cpp  TrafficSimulationInputTests.cpp  TrafficSimulationOutputTests.cpp  VehicleDomainTests.cpp  VehicleGeneratorDomainTests.cpp
xml_Files/: Voertuig.xml  Voertuiggenerator.xml  filelist.txt
xml_files/: Baan.xml  Verkeerslicht.xml  filelist.txt  test1.xml
